--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,6 @@
     "sourceType": "module"
   },
   "rules": {
-    "allow": ["_id"]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
